Bug 310619 - Character position cannot be selected in Keyboard layout editor
Summary: Character position cannot be selected in Keyboard layout editor
Status: RESOLVED FIXED
Alias: None
Product: ktouch
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Gottfried
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-24 19:16 UTC by Yuri Chornoivan
Modified: 2012-11-25 19:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0
Sentry Crash Report:


Attachments
Screenshot of the problem (168.46 KB, image/png)
2012-11-24 19:17 UTC, Yuri Chornoivan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yuri Chornoivan 2012-11-24 19:16:50 UTC
Drop down list of character positions does not allow to change character position.

Reproducible: Always

Steps to Reproduce:
1. Create new keyboard layout and use some default layout as a template.
2. Select any key.
3. Double-click on a position cell in "Characters" table and choose any position.
Actual Results:  
Position switches to "Hidden" and cannot be changed further.

Expected Results:  
KTouch changes the character position and shows the new positions on keyboard map.

Thanks for fixing this bug.
Comment 1 Yuri Chornoivan 2012-11-24 19:17:40 UTC
Created attachment 75455 [details]
Screenshot of the problem
Comment 2 Sebastian Gottfried 2012-11-25 19:18:59 UTC
Git commit 97a1be9b605f7a385b940e34093e02079034b428 by Sebastian Gottfried.
Committed on 25/11/2012 at 20:15.
Pushed by gottfried into branch 'master'.

resource editor: fix edititing of key character positions

May old way of registering custom edit delegate stopped working for
some obscure reason. Now I'm reimplementing QStyledItemDelegate
directly to overcome that issue.
FIXED-IN: 2.0

M  +1    -1    src/CMakeLists.txt
A  +139  -0    src/editor/charactersviewdelegate.cpp     [License: GPL (v2+)]
R  +10   -22   src/editor/charactersviewdelegate.h [from: src/editor/charactersvieweditorfactories.h - 056% similarity]
D  +0    -103  src/editor/charactersvieweditorfactories.cpp
M  +4    -12   src/editor/keyboardlayoutpropertieswidget.cpp
M  +2    -2    src/editor/keyboardlayoutpropertieswidget.h
M  +0    -2    src/models/charactersmodel.cpp

http://commits.kde.org/ktouch/97a1be9b605f7a385b940e34093e02079034b428