resource editor: fix edititing of key character positions

May old way of registering custom edit delegate stopped working for
some obscure reason. Now I'm reimplementing QStyledItemDelegate
directly to overcome that issue.

BUG: 310619
FIXED-IN: 2.0